--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.7",
     "uuid": "^8.3.2"
   },
   "scripts": {
