--- a/package.json
+++ b/package.json
@@ -3,28 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^28.1.4",
-    "@types/node": "^18.0.1",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
     "axios": "^0.26.1",
     "dayjs": "^1.11.0",
-    "email-validator": "^2.0.4",
-    "html2canvas": "^1.4.1",
-    "jest-watch-typeahead": "^2.0.0",
-    "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "jwt-encode": "^1.0.1",
     "miragejs": "^0.1.43",
-    "mockman-js": "^1.0.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2",
+    "mockman-js": "^1.1.5",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-iframe-click": "^2.0.2",
+    "react-player": "^2.10.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-    "react-toastify": "^9.0.5",
-    "typescript": "^4.7.4",
-    "uuid": "^8.3.2",
-    "react-player": "^2.10.1"
+    "react-toastify": "^9.0.7",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
